[package]
name = "solana_client_ext"
version = "0.1.0"
edition = "2021"
authors = ["bergabman bergabman1@gmail.com"]
description = "Solana rust client extension for efficient transaction optimization"
license = "MIT OR Apache-2.0" # Or any other license you choose
keywords = ["solana", "rpc", "client", "transaction", "compute-units", "optimization"]
categories = ["solana"] # Optional: Category for crates.io browsing

[dependencies]
solana-client = "2.2.1"
solana-program-runtime = "2.2.1"
solana-compute-budget = "2.2.1"
solana-pubkey = "2.2.1"
solana-svm-transaction = "2.2.1"
solana-timings = "2.2.1"
solana-rent = "2.2.1"
solana-message = "2.2.1"
solana-clock = "2.2.1"
solana-svm = "2.2.1"
solana-transaction = "2.2.1"
solana-account = "2.2.1"
solana-transaction-context = "2.2.1"
solana-signer = "2.2.1"
solana-compute-budget-interface = "2.2.1"
solana-bpf-loader-program = "2.2.1"
agave-feature-set = "2.2.1"
solana-fee-structure = "2.2.1"
solana-hash = "2.2.1"

[dev-dependencies]
solana-sdk = { version = "2.2.2", features = ["default"] }


[lib]
path = "src/lib.rs"